hphp/test/zend/good/Zend/tests/objects_030.php.expectf

Fatal error: Invalid static property access: bar::f in %s/objects_030.php on line 11
